--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,11 @@
   background-color: #cfdd4d;
   border-bottom: 1px solid #bbcf02;
 }
+
+img {
+  max-width: 19em !important;
+  margin-bottom: 1em;
+  display: block;
+  margin-left: auto;
+  margin-right: auto
+}
